@@ -52,6 +52,17 @@ public class HttpConnectionTest {
         assertEquals("deflate", res.header("accept-Encoding"));
     }
 
+    @Test public void sameHeadersCombineWithComma() {
+        Map<String, List<String>> headers = new HashMap<String, List<String>>();
+        List<String> values = new ArrayList<String>();
+        values.add("no-cache");
+        values.add("no-store");
+        headers.put("Cache-Control", values);
+        HttpConnection.Response res = new HttpConnection.Response();
+        res.processResponseHeaders(headers);
+        assertEquals("no-cache, no-store", res.header("Cache-Control"));
+    }
+
     @Test public void ignoresEmptySetCookies() {
         // prep http response header map
         Map<String, List<String>> headers = new HashMap<String, List<String>>();
